personal detail attributes

--- a/Resume.UI/src/app/dashboard/sections/personal-detail/personal-detail.component.html
+++ b/Resume.UI/src/app/dashboard/sections/personal-detail/personal-detail.component.html
@@ -1,45 +1,124 @@
 <section class="section pb-0 section-components">
   <div class="container mb-5">
-    <!-- Inputs -->
-    <h3 class="h4 text-success font-weight-bold mb-4">Inputs</h3>
-    <div class="mb-3">
-      <small class="text-uppercase font-weight-bold">Form controls</small>
+    
+    <!--progress bar-->
+    <div class="progress-wrapper">
+      <div class="progress-info">
+        <div class="progress-label">
+          <span>60 % Profile Completeness</span>
+        </div>
+        <div class="progress-percentage">
+          <span>60%</span>
+        </div>
+      </div>
+      <ngb-progressbar type="primary" [value]="60"></ngb-progressbar>
     </div>
+
+    <!-- Personal Details -->
+    <h3 class="h4 text-success font-weight-bold mb-4">Personal Details</h3>
+    
     <div class="row">
-      <div class="col-lg-4 col-sm-6">
+      <div class="col-lg-6 col-sm-8">
         <div class="form-group">
+          <div class="mb-2">
+            <small class="">Wanted Job Title</small>
+          </div>
           <input type="text" placeholder="Regular" class="form-control" />
         </div>
-        <div class="form-group" [ngClass]="{'focused':focus===true}">
-          <div class="input-group mb-4">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
-            </div>
-            <input class="form-control" placeholder="Search" type="text" (focus)="focus=true" (blur)="focus=false">
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6">
+        
         <div class="form-group">
-          <input type="text" placeholder="Regular" class="form-control" disabled />
-        </div>
-        <div class="form-group" [ngClass]="{'focused':focus5===true}">
-          <div class="input-group mb-4">
-            <input class="form-control" placeholder="Birthday" type="text" (focus)="focus5=true" (blur)="focus5=false">
-            <div class="input-group-append">
-              <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
-            </div>
+          <div class="mb-2">
+            <small class="">First Name</small>
           </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Email</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Country</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Adress</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Driving Lecense</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Place of Birth</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
         </div>
       </div>
-      <div class="col-lg-4 col-sm-6">
-        <div class="form-group has-success">
-          <input type="text" placeholder="Success" class="form-control is-valid" />
+
+      <div class="col-lg-6 col-sm-8">
+        
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Photo</small>
+          </div>
+          <input type="file" placeholder="Regular" class="form-control" />
         </div>
-        <div class="form-group has-danger">
-          <input type="email" placeholder="Error Input" class="form-control is-invalid" />
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Last Name</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
         </div>
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Phone</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">City</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Postal Code</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Nationality</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <div class="mb-2">
+            <small class="">Date of Birth</small>
+          </div>
+          <input type="text" placeholder="Regular" class="form-control" />
+        </div>
+        
       </div>
+      
     </div>
   </div>
   <div class="py-5 bg-secondary">
